--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Image Wrapper -->
     <div class="image-wrapper">
         <!-- Use the clickable image from the provided link -->
-        <img src="https://i.ibb.co/QfMdBqw/cards-image.jpg" alt="Main Image" width="600" height="400">
+        <img src="https://ibb.co/1vj7RmB" alt="Main Image" width="600" height="400">
 
         <!-- Define the clickable areas using empty divs positioned on top of the image -->
         <!-- Adjust the top, left, width, and height to match the card areas on the image -->
