Update image url

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Image Wrapper -->
     <div class="image-wrapper">
         <!-- Use the clickable image from the provided link -->
-        <img src="<a href="https://imgbb.com/"><img src="https://i.ibb.co/f1LqrxZ/MoTS.png" alt="MoTS" border="0" /></a>" alt="Main Image" width="600" height="400">
+        <img src="<a href="https://imgbb.com/"><img src="https://i.ibb.co/VTcwRjW/MoTS.png" alt="MoTS" border="0"></a>
 
         <!-- Define the clickable areas using empty divs positioned on top of the image -->
         <!-- Adjust the top, left, width, and height to match the card areas on the image -->
