--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <!-- Image Wrapper -->
         <div class="image-wrapper">
             <!-- Use the clickable image from the provided link -->
-            <img src="https://i.ibb.co/QfMdBqw/cards-image.jpg" alt="Mists of Tirna Scithe Map" width="600" height="400">
+            <img src="https://i.ibb.co/VTcwRjW/MoTS.png" alt="MoTS" border="0"></a>>
 
             <!-- Define the clickable areas using empty divs positioned on top of the image -->
             <!-- Adjust the top, left, width, and height to match the card areas on the image -->
