--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background: url('https://images.unsplash.com/photo-1612555376219-0a4e7c4f1b91?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDJ8fGZhaXJ5JTIwd2luZ3N8fDB8fHx8MTY4NTc2NzY3OA&ixlib=rb-1.2.1&q=80&w=1080') no-repeat center center fixed;
+            background: url('https://i.ibb.co/6RXSzzK/anthony-tran-5d41p-9vl-Ok-unsplash.jpg') no-repeat center center fixed;
             background-size: cover; /* Ensures the image covers the entire background */
             color: #ecf0f1;
         }
