--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background: url('https://i.ibb.co/6RXSzzK/anthony-tran-5d41p-9vl-Ok-unsplash.jpg') no-repeat center center fixed;
+            background-image: url('https://i.ibb.co/6RXSzzK/anthony-tran-5d41p-9vl-Ok-unsplash.jpg');
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-attachment: fixed;
             background-size: cover; /* Ensures the image covers the entire background */
             color: #ecf0f1;
         }
@@ -21,7 +24,7 @@
             max-width: 800px;
             margin: 30px auto;
             padding: 20px;
-            background: rgba(0, 0, 0, 0.5); /* Adds a darker transparent layer for readability */
+            background: rgba(0, 0, 0, 0.6); /* Adds a darker transparent layer for readability */
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
         }
@@ -99,15 +102,15 @@
             <img src="https://i.ibb.co/VTcwRjW/MoTS.png" alt="MoTS" border="0">
 
             <!-- Define the clickable areas using empty divs positioned on top of the image -->
-            <div class="clickable-area" style="top: 20px; left: 20px; width: 140px; height: 160px;" data-area="1"></div>
-            <div class="clickable-area" style="top: 20px; left: 180px; width: 140px; height: 160px;" data-area="2"></div>
-            <div class="clickable-area" style="top: 20px; left: 340px; width: 140px; height: 160px;" data-area="3"></div>
-            <div class="clickable-area" style="top: 20px; left: 500px; width: 140px; height: 160px;" data-area="4"></div>
+            <div class="clickable-area" style="top: 20px; left: 10%; width: 140px; height: 160px;" data-area="1"></div>
+            <div class="clickable-area" style="top: 20px; left: 20%; width: 140px; height: 160px;" data-area="2"></div>
+            <div class="clickable-area" style="top: 20px; left: 30%; width: 140px; height: 160px;" data-area="3"></div>
+            <div class="clickable-area" style="top: 20px; left: 40%; width: 140px; height: 160px;" data-area="4"></div>
 
-            <div class="clickable-area" style="top: 200px; left: 20px; width: 140px; height: 160px;" data-area="5"></div>
-            <div class="clickable-area" style="top: 200px; left: 180px; width: 140px; height: 160px;" data-area="6"></div>
-            <div class="clickable-area" style="top: 200px; left: 340px; width: 140px; height: 160px;" data-area="7"></div>
-            <div class="clickable-area" style="top: 200px; left: 500px; width: 140px; height: 160px;" data-area="8"></div>
+            <div class="clickable-area" style="top: 200px; left: 10%; width: 140px; height: 160px;" data-area="5"></div>
+            <div class="clickable-area" style="top: 200px; left: 20%; width: 140px; height: 160px;" data-area="6"></div>
+            <div class="clickable-area" style="top: 200px; left: 30%; width: 140px; height: 160px;" data-area="7"></div>
+            <div class="clickable-area" style="top: 200px; left: 40%; width: 140px; height: 160px;" data-area="8"></div>
         </div>
 
         <!-- Reset Button -->
