--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         .image-wrapper {
             position: relative;
             display: inline-block;
+            margin-bottom: 20px; /* Space below the image for the button */
         }
 
         /* Styles for clickable areas */
@@ -107,14 +108,14 @@
             <div class="clickable-area" style="top: 20px; left: 50%; width: 140px; height: 160px;" data-area="3"></div>
             <div class="clickable-area" style="top: 20px; left: 75%; width: 140px; height: 160px;" data-area="4"></div>
 
-            <div class="clickable-area" style="top: 200px; left: 10%; width: 140px; height: 160px;" data-area="5"></div>
-            <div class="clickable-area" style="top: 200px; left: 20%; width: 140px; height: 160px;" data-area="6"></div>
-            <div class="clickable-area" style="top: 200px; left: 30%; width: 140px; height: 160px;" data-area="7"></div>
-            <div class="clickable-area" style="top: 200px; left: 40%; width: 140px; height: 160px;" data-area="8"></div>
-        </div>
+            <div class="clickable-area" style="top: 200px; left: 0%; width: 140px; height: 160px;" data-area="5"></div>
+            <div class="clickable-area" style="top: 200px; left: 25%; width: 140px; height: 160px;" data-area="6"></div>
+            <div class="clickable-area" style="top: 200px; left: 50%; width: 140px; height: 160px;" data-area="7"></div>
+            <div class="clickable-area" style="top: 200px; left: 75%; width: 140px; height: 160px;" data-area="8"></div>
 
-        <!-- Reset Button -->
-        <button class="reset-button" onclick="resetSelections()">Reset Selection</button>
+            <!-- Centered Reset Button Below Image -->
+            <button class="reset-button" onclick="resetSelections()">Reset Selection</button>
+        </div>
     </div>
 
     <script>
