--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
         .image-wrapper {
             position: relative;
             display: inline-block;
-            margin-bottom: 20px; /* Space below the image for the button */
         }
 
         /* Styles for clickable areas */
@@ -103,19 +102,19 @@
             <img src="https://i.ibb.co/VTcwRjW/MoTS.png" alt="MoTS" border="0">
 
             <!-- Define the clickable areas using empty divs positioned on top of the image -->
-            <div class="clickable-area" style="top: 20px; left: 0%; width: 140px; height: 160px;" data-area="1"></div>
-            <div class="clickable-area" style="top: 20px; left: 25%; width: 140px; height: 160px;" data-area="2"></div>
-            <div class="clickable-area" style="top: 20px; left: 50%; width: 140px; height: 160px;" data-area="3"></div>
-            <div class="clickable-area" style="top: 20px; left: 75%; width: 140px; height: 160px;" data-area="4"></div>
+            <div class="clickable-area" style="top: 20px; left: 10%; width: 140px; height: 160px;" data-area="1"></div>
+            <div class="clickable-area" style="top: 20px; left: 20%; width: 140px; height: 160px;" data-area="2"></div>
+            <div class="clickable-area" style="top: 20px; left: 30%; width: 140px; height: 160px;" data-area="3"></div>
+            <div class="clickable-area" style="top: 20px; left: 40%; width: 140px; height: 160px;" data-area="4"></div>
 
-            <div class="clickable-area" style="top: 200px; left: 0%; width: 140px; height: 160px;" data-area="5"></div>
-            <div class="clickable-area" style="top: 200px; left: 25%; width: 140px; height: 160px;" data-area="6"></div>
-            <div class="clickable-area" style="top: 200px; left: 50%; width: 140px; height: 160px;" data-area="7"></div>
-            <div class="clickable-area" style="top: 200px; left: 75%; width: 140px; height: 160px;" data-area="8"></div>
-
-            <!-- Centered Reset Button Below Image -->
-            <button class="reset-button" onclick="resetSelections()">Reset Selection</button>
+            <div class="clickable-area" style="top: 200px; left: 10%; width: 140px; height: 160px;" data-area="5"></div>
+            <div class="clickable-area" style="top: 200px; left: 20%; width: 140px; height: 160px;" data-area="6"></div>
+            <div class="clickable-area" style="top: 200px; left: 30%; width: 140px; height: 160px;" data-area="7"></div>
+            <div class="clickable-area" style="top: 200px; left: 40%; width: 140px; height: 160px;" data-area="8"></div>
         </div>
+
+        <!-- Reset Button -->
+        <button class="reset-button" onclick="resetSelections()">Reset Selection</button>
     </div>
 
     <script>
