--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
             padding: 15px 30px;
             font-size: 16px;
             cursor: pointer;
-            margin-top: 20px;
+            margin-top: 20px; /* Space above the button */
             transition: background-color 0.2s;
             border-radius: 5px;
+            display: inline-block; /* Ensures the button respects the center alignment */
         }
 
         .reset-button:hover {
@@ -107,10 +108,10 @@
             <div class="clickable-area" style="top: 20px; left: 50%; width: 140px; height: 160px;" data-area="3"></div>
             <div class="clickable-area" style="top: 20px; left: 75%; width: 140px; height: 160px;" data-area="4"></div>
 
-            <div class="clickable-area" style="top: 200px; left: 0%; width: 140px; height: 160px;" data-area="5"></div>
-            <div class="clickable-area" style="top: 200px; left: 25%; width: 140px; height: 160px;" data-area="6"></div>
-            <div class="clickable-area" style="top: 200px; left: 50%; width: 140px; height: 160px;" data-area="7"></div>
-            <div class="clickable-area" style="top: 200px; left: 75%; width: 140px; height: 160px;" data-area="8"></div>
+            <div class="clickable-area" style="top: 220px; left: 0%; width: 140px; height: 160px;" data-area="5"></div>
+            <div class="clickable-area" style="top: 220px; left: 25%; width: 140px; height: 160px;" data-area="6"></div>
+            <div class="clickable-area" style="top: 220px; left: 50%; width: 140px; height: 160px;" data-area="7"></div>
+            <div class="clickable-area" style="top: 220px; left: 75%; width: 140px; height: 160px;" data-area="8"></div>
         </div>
 
         <!-- Reset Button -->
