--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <h2>A Guide to Navigate the Labyrinth</h2>
 
         <!-- Brief description about the image map -->
-        <p>Welcome to the Mists of Tirna Scithe helper page! Click on the different sections of the image below to see the highlighted areas and find the best path through the mists. Use the "Reset Selection" button if you want to clear your choices and start again.</p>
+        <p>Welcome to the Mists of Tirna Scithe helper! Click on the four images that appear in the maze so you don't have to memorize.</p>
 
         <!-- Image Wrapper -->
         <div class="image-wrapper">
@@ -116,7 +116,7 @@
 
         <!-- Centered Reset Button Container -->
         <div style="text-align: center; margin-top: 20px;">
-            <button class="reset-button" onclick="resetSelections()">Reset Selection</button>
+            <button class="reset-button" onclick="resetSelections()">Reset</button>
         </div>
     </div>
 
