--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         background-repeat: no-repeat, no-repeat; /* Prevent further repetition */
         background-position: left center, right center; /* Position one image on the left, one on the right */
         background-attachment: fixed;
-        background-size: contain; /* Adjust this to fit the images */
+        background-size: cover; /* Adjust this to fit the images */
         color: #ecf0f1;
         }
         
