--- a/index.html
+++ b/index.html
@@ -95,10 +95,9 @@
     <div class="container">
         <!-- Page Title -->
         <h1>Mists of Tirna Scithe Helper</h1>
-        <h2>A Guide to Navigate the Labyrinth</h2>
-
+        
         <!-- Brief description about the image map -->
-        <p>Welcome to the Mists of Tirna Scithe helper! Click on the four images that appear in the maze so you don't have to memorize.</p>
+        <p>Welcome to the Mists of Tirna Scithe helper! Click on the four images that appear in the maze so you don't have to memorize.Take note where the group of three is: left/right, up/down, columns 1&3/2&4</p>
 
         <!-- Image Wrapper -->
         <div class="image-wrapper">
