--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
 
         h1 {
-            font-family: 'Georgia', serif;
+            font-family: 'Perpetua', serif;
             color: #e74c3c;
             text-shadow: 1px 1px 5px black;
             font-size: 2.5em;
@@ -90,7 +90,7 @@
 <body>
     <div class="container">
         <h1>Mists of Tirna Scithe Helper</h1>
-        <p>Welcome to the Mists of Tirna Scithe helper! Click on the four images that appear in the maze so you don't have to memorize. Take note where the group of three is: left/right, up/down, columns 1&3/2&4</p>
+        <p>Welcome to the Mists of Tirna Scithe helper! Click on the four images that appear in the maze. The odd one out will turn red</p>
 
         <div class="image-wrapper">
             <img src="https://i.ibb.co/VTcwRjW/MoTS.png" alt="MoTS" border="0">
