--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         /* Page Styling */
         body {
-            font-family: 'Waiting for the Sunrise', cursive; /* Apply the custom font to all text */
+            font-family: 'Waiting for the Sunrise', cursive; /* Apply the custom font */
             text-align: center;
             margin: 0;
             padding: 0;
@@ -32,20 +32,11 @@
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
         }
 
-        h1, h2, p {
-            font-family: 'Waiting for the Sunrise', cursive; /* Ensure headings and paragraphs use the new font */
-        }
-
         h1 {
+            font-family: 'Waiting for the Sunrise', cursive; /* Ensure h1 uses the custom font */
             color: #e74c3c;
             text-shadow: 1px 1px 5px black;
             font-size: 2.5em;
-        }
-
-        h2 {
-            font-size: 1.5em;
-            color: #ecdbff;
-            margin-top: 10px;
         }
 
         p {
@@ -73,6 +64,11 @@
             border-color: #3498db;
         }
 
+        /* Styling for odd ones out */
+        .odd-out {
+            border-color: #e74c3c; /* Red color for the odd one out */
+        }
+
         /* Reset button styling */
         .reset-button {
             background-color: #e74c3c;
@@ -85,7 +81,7 @@
             transition: background-color 0.2s;
             border-radius: 5px;
             display: inline-block;
-            font-family: 'Arial', sans-serif; /* Use a standard font for the button */
+            font-family: 'Arial', sans-serif; /* Use Arial for the button */
         }
 
         .reset-button:hover {
@@ -94,13 +90,10 @@
     </style>
 </head>
 <body>
-    <!-- Container for all the page content -->
     <div class="container">
         <h1>Mists of Tirna Scithe Helper</h1>
-        <h2>A Guide to Navigate the Labyrinth</h2>
-        <p>Welcome to the Mists of Tirna Scithe helper! Click on the four images that appear in the maze so you don't have to memorize.Take note where the group of three is: left/right, up/down, columns 1&3/2&4</p>
+        <p>Welcome to the Mists of Tirna Scithe helper! Click on the four images that appear in the maze. The odd one out will turn red</p>
 
-        <!-- Image Wrapper -->
         <div class="image-wrapper">
             <img src="https://i.ibb.co/VTcwRjW/MoTS.png" alt="MoTS" border="0">
             <div class="clickable-area" style="top: 20px; left: 0%; width: 140px; height: 160px;" data-area="1"></div>
@@ -113,25 +106,42 @@
             <div class="clickable-area" style="top: 220px; left: 75%; width: 140px; height: 160px;" data-area="8"></div>
         </div>
 
-        <!-- Centered Reset Button Container -->
         <div style="text-align: center; margin-top: 20px;">
             <button class="reset-button" onclick="resetSelections()">Reset</button>
         </div>
     </div>
 
     <script>
-        // Get all clickable areas
         const clickableAreas = document.querySelectorAll('.clickable-area');
+
         clickableAreas.forEach((area) => {
             area.addEventListener('click', () => {
                 area.classList.toggle('selected');
+                checkPatterns();
             });
         });
 
+        function checkPatterns() {
+            const selectedAreas = Array.from(clickableAreas).filter(area => area.classList.contains('selected'));
+            clickableAreas.forEach(area => area.classList.remove('odd-out'));
+
+            if (selectedAreas.length === 4) {
+                const topRow = selectedAreas.filter(area => parseInt(area.dataset.area) <= 4).length;
+                const leftHalf = selectedAreas.filter(area => ['1', '2', '5', '6'].includes(area.dataset.area)).length;
+                const columns13 = selectedAreas.filter(area => ['1', '3', '5', '7'].includes(area.dataset.area)).length;
+
+                if (topRow === 3 || leftHalf === 3 || columns13 === 3) {
+                    selectedAreas.forEach(area => {
+                        if (topRow === 3 && parseInt(area.dataset.area) > 4) area.classList.add('odd-out');
+                        else if (leftHalf === 3 && !['1', '2', '5', '6'].includes(area.dataset.area)) area.classList.add('odd-out');
+                        else if (columns13 === 3 && !['1', '3', '5', '7'].includes(area.dataset.area)) area.classList.add('odd-out');
+                    });
+                }
+            }
+        }
+
         function resetSelections() {
-            clickableAreas.forEach((area) => {
-                area.classList.remove('selected');
-            });
+            clickableAreas.forEach(area => area.classList.remove('selected', 'odd-out'));
         }
     </script>
 </body>
