--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mists of Tirna Scithe Helper</title>
     <!-- Include the Google Font -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Corben" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" />
     <style>
         /* Page Styling */
@@ -40,6 +41,7 @@
         }
 
         p {
+            font-family: 'Corben', cursive;
             font-size: 1.2em;
             margin: 10px 0;
             line-height: 1.6;
