small text change

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
     <div class="container">
         <h1>Mists of Tirna Scithe Helper</h1>
-        <p>Welcome to the Mists of Tirna Scithe helper! Click on the four images that appear in the maze. The odd one out will turn red</p>
+        <p>Click on the four images that appear in the maze. The odd one out will turn red</p>
 
         <div class="image-wrapper">
             <img src="https://i.ibb.co/VTcwRjW/MoTS.png" alt="MoTS" border="0">
